--- a/index.html
+++ b/index.html
@@ -7,28 +7,26 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <!-- <div id="header">
-      <div style="width: 10%">
-        <img
-          style="width: 100%; height: 100%"
-          src="https://lh3.googleusercontent.com/-Mup6lGPRKgs/ZWQ_6pqlXNI/AAAAAAAAACo/WQdPOmJBO2cKLdBtod6OiF_tcfDMO7pCQCNcBGAsYHQ/s224/logo%2B%2Bcgv.png"
-          alt=""
-        />
-      </div>
-      <div style="width: 50%">
-        <input
-          style="width: 100%;"
-          id="search-bar"
-          type="text"
-          placeholder="tìm kiếm sản phẩm..."
-        />
-      </div>
-    </div> -->
+ <div id="head">
+  <img id="head-img" src="https://lh3.googleusercontent.com/-Mup6lGPRKgs/ZWQ_6pqlXNI/AAAAAAAAACo/WQdPOmJBO2cKLdBtod6OiF_tcfDMO7pCQCNcBGAsYHQ/s224/logo%2B%2Bcgv.png" alt="">
+   <input id="search" type="text" placeholder="Tìm Kiếm Sản Phẩm">
+ </div>
 
-    <div class="product-list" id="product-list">
-      <template id="product-template"> </template>
-    </div>
+    <!-- <h1>Products</h1>
+  <div class="product-list" id="product-list">
+    <template id="product-template">
+      <div class="card">
+        <img id="product-image" class="card-img-top" style="width: 50%; height: 50%;" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjmaq-lt5mNBSTNDudVLxDqezTiI201lGP4fNscadVcOoab2lKwNjvorcdBQz-cLpwNlPztJIZJoHjsZyy7lcY3_D_5SZ1gPKFnifZCyaCKwFMX1lFGedfuwUCBXQNU8Na_LMnoJV6Ztq8hVU-oiBAVsNsno0m5pguTAdiJk1EAjRSUAj_EzMEC8GkjaM8z/s16000/3.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title" id="product-name">day cau</h5>
+          <p class="card-text" id="product-price">2000</p>
+          <p class="card-description" id="product-description">day cau</p>
+          <a href="#" class="btn btn-primary">Add to cart</a>
+        </div>
+      </div>
+    </template>
+  </div> -->
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
