--- a/login.html
+++ b/login.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-    <div class="full-screen-container">
+   
+  <div class="full-screen-container">
         <div class="login-container">
           <h3 class="login-title">CGV FISHING</h3>
           <form>
             <div class="input-group">
               <label>Email</label>
-              <input type="email" />
+              <input type="email" id="email"/>
             </div>
             <div class="input-group">
               <label>Mật Khẩu</label>
-              <input type="password" />
+              <input type="password" id="password" />
             </div>
-            <button type="submit" class="login-button">Đăng nhập</button>
+            <button type="submit" class="login-button" id="submit-btn">Đăng nhập</button>
           </form>
         </div>
       </div>
+      <script src="js/login.js"></script>
 </body>
 </html>
