--- a/register.html
+++ b/register.html
@@ -12,16 +12,16 @@
         <form method="post">
            <fieldset>
               <br/>
-              <input type="text" name="username" id="username" placeholder="Tên Người Dùng" required autofocus>
+              <input type="text" name="username" id="username" placeholder="Tên Người Dùng" required autofocus id="">
               <br/><br/>
-              <input type="email" name="email" id="email" placeholder="Email" required>
+              <input type="email" name="email" id="email" placeholder="Email"  required>
               <br/><br/>
               <input type="password" name="password" id="password" placeholder="Mật Khẩu" required>
               <br/><br/>
               <input type="password" name="confirm-password" id="confirm-password" placeholder="Xác Nhận Mật Khẩu" required>
               <br/> <br/> <br/>
               <label for="submit"></label>
-              <input type="submit" name="submit" id="submit" value="Đăng Ký">
+              <input type="submit" name="submit" id="submit" id="submit-btn" value="Đăng Ký">
            </fieldset>
         </form>
      </div>
