--- a/index.html
+++ b/index.html
@@ -4,28 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
- <div id="head">
-  <img id="head-img" src="https://lh3.googleusercontent.com/-Mup6lGPRKgs/ZWQ_6pqlXNI/AAAAAAAAACo/WQdPOmJBO2cKLdBtod6OiF_tcfDMO7pCQCNcBGAsYHQ/s224/logo%2B%2Bcgv.png" alt="">
-   <input id="search" type="text" placeholder="Tìm Kiếm Sản Phẩm">
- </div>
-
-    <!-- <h1>Products</h1>
-  <div class="product-list" id="product-list">
-    <template id="product-template">
-      <div class="card">
-        <img id="product-image" class="card-img-top" style="width: 50%; height: 50%;" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjmaq-lt5mNBSTNDudVLxDqezTiI201lGP4fNscadVcOoab2lKwNjvorcdBQz-cLpwNlPztJIZJoHjsZyy7lcY3_D_5SZ1gPKFnifZCyaCKwFMX1lFGedfuwUCBXQNU8Na_LMnoJV6Ztq8hVU-oiBAVsNsno0m5pguTAdiJk1EAjRSUAj_EzMEC8GkjaM8z/s16000/3.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title" id="product-name">day cau</h5>
-          <p class="card-text" id="product-price">2000</p>
-          <p class="card-description" id="product-description">day cau</p>
-          <a href="#" class="btn btn-primary">Add to cart</a>
+    <div class="navigation">
+      <div class="navigation-bar">
+        <div class="place1">
+          <p class="phone-number">☏ 0888 667 586</p>
+          <p class="location">📍 Xem vị trí cửa hàng</p>
+        </div>
+        <div class="place2">
+          <p class="text">
+            CGVfishing Xin kính chào Qúy Khách, Qúy Khách cần tư vấn về đồ câu
+            xin vui lòng liên hệ ngay Hotline 0888667586.
+          </p>
         </div>
       </div>
-    </template>
-  </div> -->
+      <div class="navigation-bar2">
+        <img
+          src="https://lh3.googleusercontent.com/-Mup6lGPRKgs/ZWQ_6pqlXNI/AAAAAAAAACo/WQdPOmJBO2cKLdBtod6OiF_tcfDMO7pCQCNcBGAsYHQ/s224/logo%2B%2Bcgv.png"
+          alt=""
+          class="logo"
+        />
+
+        <input type="text" placeholder="Search.." class="searchs" />
+      </div>
+    </div>
+      
+      <h1>Products</h1>
+    <div class="product-list" id="product-list">
+      <template id="product-template">
+        <div class="card">
+          <img id="product-image" class="card-img-top" style="width: 50%; height: 50%;" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjmaq-lt5mNBSTNDudVLxDqezTiI201lGP4fNscadVcOoab2lKwNjvorcdBQz-cLpwNlPztJIZJoHjsZyy7lcY3_D_5SZ1gPKFnifZCyaCKwFMX1lFGedfuwUCBXQNU8Na_LMnoJV6Ztq8hVU-oiBAVsNsno0m5pguTAdiJk1EAjRSUAj_EzMEC8GkjaM8z/s16000/3.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title" id="product-name">day cau</h5>
+            <p class="card-text" id="product-price">2000</p>
+            <p class="card-description" id="product-description">day cau</p>
+            <a href="#" class="btn btn-primary">Add to cart</a>
+          </div>
+        </div>
+      </template>
+    </div>
+    
+ <div class="footer">
+  
+ </div>
 
     <script src="js/main.js"></script>
   </body>
