--- a/index.html
+++ b/index.html
@@ -26,16 +26,41 @@
       </div>
       <div class="navigation-bar2">
         <img
+         
           src="https://lh3.googleusercontent.com/-Mup6lGPRKgs/ZWQ_6pqlXNI/AAAAAAAAACo/WQdPOmJBO2cKLdBtod6OiF_tcfDMO7pCQCNcBGAsYHQ/s224/logo%2B%2Bcgv.png"
           alt=""
           class="logo"
         />
 
         <input type="text" placeholder="Search.." class="searchs" />
+        <button style="height: 20px; margin-top:10%;">Tìm Kiếm</button>
       </div>
 
       <div class="navi2">
-        <a href="index.html" style="text-decoration: none;">Trang Chủ</a>
+        <a href="index.html" style="text-decoration: none">Trang Chủ</a>
+        <div>
+          <select name="đồ câu đài" id="">  
+            <option disabled selected value="">đồ câu đài</option>
+            <option value="cần câu">cần câu</option>
+            <option value="mồi">mồi</option>
+            <option value="phụ kiện">phụ kiện</option>
+          </select>
+        </div>
+
+        <div>
+          <select name="đồ câu lure" id="">
+            <option disabled selected value="">đồ câu lure</option>
+            <option value="cần câu">cần</option>
+            <option value="máy câu">máy</option>
+            <option value="mồi câu">mồi câu</option>
+            <option value="phụ kiện">phụ kiện</option>
+          </select>
+        </div>
+
+        <div><a href="" style="text-decoration: none">giới thiệu</a></div>
+        <div>
+          <a href="" style="text-decoration: none">cam kết và bảo hành</a>
+        </div>
       </div>
     </div>
 
@@ -48,7 +73,25 @@
       </div>
       <div>
         <img
-          src="https://lh3.googleusercontent.com/-z0EtyA60h_c/ZWREOgO5FcI/AAAAAAAAAC0/8O5s779qljMU6dmCG9SQHSyuH_UL2hQGwCNcBGAsYHQ/s0/2.png"
+          src="https://lh3.googleusercontent.com/-Nj1SFy44KOE/ZWREOUZF2TI/AAAAAAAAACw/D7vJHjdxFGEzWZWSiT3Uh_Ea02rQRGWIQCNcBGAsYHQ/s0/1.png"
+          alt=""
+        />
+      </div>
+      <div>
+        <img
+          src="https://lh3.googleusercontent.com/-U4He533nEK0/ZWREOrfCo_I/AAAAAAAAAC4/FJXMgnIkQrIEmaTTbVoEPZ55oVp8bcZiQCNcBGAsYHQ/s0/3.png"
+          alt=""
+        />
+      </div>
+      <div>
+        <img
+          src="https://lh3.googleusercontent.com/-Nj1SFy44KOE/ZWREOUZF2TI/AAAAAAAAACw/D7vJHjdxFGEzWZWSiT3Uh_Ea02rQRGWIQCNcBGAsYHQ/s0/1.png"
+          alt=""
+        />
+      </div>
+      <div>
+        <img
+          src="https://lh3.googleusercontent.com/-Nj1SFy44KOE/ZWREOUZF2TI/AAAAAAAAACw/D7vJHjdxFGEzWZWSiT3Uh_Ea02rQRGWIQCNcBGAsYHQ/s0/1.png"
           alt=""
         />
       </div>
@@ -60,38 +103,20 @@
       </div>
       <div>
         <img
-          src="https://lh3.googleusercontent.com/-z0EtyA60h_c/ZWREOgO5FcI/AAAAAAAAAC0/8O5s779qljMU6dmCG9SQHSyuH_UL2hQGwCNcBGAsYHQ/s0/2.png"
-          alt=""
-        />
-      </div>
-      <div>
-        <img
-          src="https://lh3.googleusercontent.com/-z0EtyA60h_c/ZWREOgO5FcI/AAAAAAAAAC0/8O5s779qljMU6dmCG9SQHSyuH_UL2hQGwCNcBGAsYHQ/s0/2.png"
-          alt=""
-        />
-      </div>
-      <div>
-        <img
-          src="https://lh3.googleusercontent.com/-z0EtyA60h_c/ZWREOgO5FcI/AAAAAAAAAC0/8O5s779qljMU6dmCG9SQHSyuH_UL2hQGwCNcBGAsYHQ/s0/2.png"
-          alt=""
-        />
-      </div>
-      <div>
-        <img
-          src="https://lh3.googleusercontent.com/-z0EtyA60h_c/ZWREOgO5FcI/AAAAAAAAAC0/8O5s779qljMU6dmCG9SQHSyuH_UL2hQGwCNcBGAsYHQ/s0/2.png"
+          src="https://lh3.googleusercontent.com/-Nj1SFy44KOE/ZWREOUZF2TI/AAAAAAAAACw/D7vJHjdxFGEzWZWSiT3Uh_Ea02rQRGWIQCNcBGAsYHQ/s0/1.png"
           alt=""
         />
       </div>
     </div>
 
-    <h1>Products</h1>
+    <h1 style="text-align: center;">ĐỒ CÂU LURE</h1>
     <div class="product-list" id="product-list">
       <template id="product-template">
         <div class="card">
           <img
             id="product-image"
             class="card-img-top"
-            style="width: 50%; height: 50%"
+            style="width: 100%; height: 60%"
             src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjmaq-lt5mNBSTNDudVLxDqezTiI201lGP4fNscadVcOoab2lKwNjvorcdBQz-cLpwNlPztJIZJoHjsZyy7lcY3_D_5SZ1gPKFnifZCyaCKwFMX1lFGedfuwUCBXQNU8Na_LMnoJV6Ztq8hVU-oiBAVsNsno0m5pguTAdiJk1EAjRSUAj_EzMEC8GkjaM8z/s16000/3.png"
             alt="Card image cap"
           />
@@ -99,7 +124,7 @@
             <h5 class="card-title" id="product-name">day cau</h5>
             <p class="card-text" id="product-price">2000</p>
             <p class="card-description" id="product-description">day cau</p>
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <div class="add" style="width:40%; height: 10%; border:1px solid; border-radius: 5px;"><a href="product.html" class="btn-primary" style=" text-decoration: none; color: black; ">Mua Ngay</a></div>
           </div>
         </div>
       </template>
@@ -132,6 +157,7 @@
     </div>
 
     <script src="js/main.js"></script>
+   
     <script
       src="https://code.jquery.com/jquery-3.7.1.js"
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
