--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
               <label>Mật Khẩu</label>
               <input type="password" id="password" />
             </div>
-            <button type="submit" class="login-button" id="submit-btn">Đăng nhập</button>
+            <button type="submit" class="login-button" id="submit-btn"><a href="index.html" style="text-decoration: none; color: white;">ĐĂNG NHẬP</a></button>
           </form>
         </div>
       </div>
