--- a/register.html
+++ b/register.html
@@ -12,8 +12,6 @@
         <form method="post">
            <fieldset>
               <br/>
-              <input type="text" name="username" id="username" placeholder="Tên Người Dùng" required autofocus id="">
-              <br/><br/>
               <input type="email" name="email" id="email" placeholder="Email"  required>
               <br/><br/>
               <input type="password" name="password" id="password" placeholder="Mật Khẩu" required>
@@ -21,7 +19,8 @@
               <input type="password" name="confirm-password" id="confirm-password" placeholder="Xác Nhận Mật Khẩu" required>
               <br/> <br/> <br/>
               <label for="submit"></label>
-              <input type="submit" name="submit" id="submit" id="submit-btn" value="Đăng Ký">
+           <button type="submit" name="submit" id="submit" id="submit-btn" style="width: 100px;
+           height: 20;border-radius: 10px;"><a href="login.html" style="text-decoration: none;">ĐĂNG KÝ</a></button>
            </fieldset>
         </form>
      </div>
