--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
               <input type="password" name="confirm-password" id="confirm-password" placeholder="Xác Nhận Mật Khẩu" required>
               <br/> <br/> <br/>
               <label for="submit"></label>
-           <button type="submit" name="submit" id="submit" id="submit-btn" style="width: 100px;
+           <button type="submit" name="submit"  id="submit-btn" style="width: 100px;
            height: 20;border-radius: 10px;"><a href="login.html" style="text-decoration: none;">ĐĂNG KÝ</a></button>
            </fieldset>
         </form>
