--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
           </select>
         </div>
 
-        <a href="" style="text-decoration: none ; color: black;" class="btn2">Giới Thiệu</a>
+        <a href="intro.html" style="text-decoration: none ; color: black;" class="btn2">Giới Thiệu</a>
         
-          <a href="" style="text-decoration: none ; color: black;" class="btn2">Cam Kết Và Bảo Hành</a>
+          <a href="scam.html" style="text-decoration: none ; color: black;" class="btn2">Cam Kết Và Bảo Hành</a>
         
       </div>
     </div>
